# ITD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: demo_fusionportable.yaml  demo_online.yaml  demo_sthereo.yaml  image_fir.json
demo/: demo_fusionportable_opt.cpp  demo_online_opt.cpp  demo_sthereo_opt.cpp
demo/demo_traj/: 20220216_corridor_day.txt  20220216_escalator_day.txt  20220225_building_day.txt  README.md  sthereo_01_kaist_morning.txt  sthereo_04_snu_morning.txt  sthereo_09_valley_evening.txt
include/: IntensityTD.hpp  gmm.hpp  mypoint_type.h  voxel_hash.hpp
include/AutoExposure/: image_processing.cpp  image_processing.h
include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
launch/: run_fusionportable_opt.launch  run_online_opt.launch  run_sthereo_opt.launch
rviz_cfg/: itd.rviz  itd_path.rviz
src/: ITDLog.cpp  ITDVis.cpp  IntensityTD.cpp
